# pka-workspace

./: .gitignore  .gitmodules  .pre-commit-config.yaml  =  AGENTS.md  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  RELEASE_PROCESS.md  REPO_ALIGNMENT.md  pyproject.toml  test_council_debate.py  v3_crop_test.spec.ts
.claude/: launch.json  settings.local.json
.github/: dependabot.yml
Election Countdown/: LAUNCH.md  _headers  _redirects  index.html  privacy.html  schema.sql  terms.html  wrangler.toml
FlowBoard/: _test_store.cjs  analytics.js  app.js  board.js  index.html  store.js  styles.css
Owner's Inbox/: ARENA_IMPLEMENTATION_PLAN.md  COUNCIL-auto-gap-response-debate-verdict.md  COUNCIL-v0.5.0-complete-report.md  COUNCIL-v0.5.1-fixes-report.md  CRUCIBLE-DEBUGGER-write-path-test-report.md  CRUCIBLE-SENTINEL-final-verification.md  CRUCIBLE-SENTINEL-launch-gate-final.md  CRUCIBLE-SENTINEL-launch-verification.md  CRUCIBLE-SENTINEL-round2-retest-all-green.md  CRUCIBLE-aihangout-test-coverage-assessment.md  CRUCIBLE-full-test-sweep-2026-04-01.md  CRUCIBLE-hermes-nemoclaw-test-v2.md  CRUCIBLE-hermes-nemoclaw-test.md  CRUCIBLE-pentest-gap-rca.md  CRUCIBLE-pka-v050-test-sweep.md  CRUCIBLE-pka-v060-test-sweep.md  CRUCIBLE-redis-cache-test-suite.md  CRUCIBLE-retest-2026-03-24.md  DEBUGGER-FORGE-aihangout-fixes.md  DEBUGGER-FORGE-aihangout-verified-fixes.md  DEBUGGER-FORGE-emergency-xss-fix.md  DEBUGGER-FORGE-final-content-cleanup.md  DEBUGGER-mw-hook-fix.md  DELIVERY_MANIFEST.md  EMERGENCY-supply-chain-check-2026-04-01.md  Election-Countdown-data-capture-hardening-2026-05-15.md  Election-Countdown-live-production-QA-2026-05-15.md  FIX-litellm-pin-2026-04-01.md  FIX-ollama-tunnel-2026-04-01.md  FIX-spark2-db-binding-2026-04-01.md  FLYWHEEL-implementation-report.md  FORGE-DEBUGGER-auth-fix-verified.md  FORGE-agent-brain-build.md  FORGE-agent-code-injection.md  FORGE-agent-system-deep-dive-upgrade.md  FORGE-aihangout-agent-api.md  FORGE-aihangout-agent-seeding.md  FORGE-aihangout-rag-bridge.md  FORGE-anomaly-monitor-deployed.md  FORGE-cli-agentforge.md  (+138 more)
QuoteHub/: README.md
Team/: AGENT_TOOL_ENTITLEMENTS.json  CONFIDENCE_VOCABULARY.md  CORE_RULES.md  MESSAGE_PROTOCOL.md  OPERATING_MODEL.md  TASK_BRIEF_TEMPLATE.md  handoff.md  roster.md  status.md  (+1 more)
Team Inbox/: README.md  bpc-protocol.html
(+243 files in other folders)
